--- a/application.html
+++ b/application.html
@@ -43,12 +43,21 @@ li a:hover:not(.active) {
 <br>
 <form action="https://formspree.io/f/{form_id}" method="post">
   <label for="name">Your Name</label><br>
-  <input name="Name" id="name" type="text">
-  <br>
+  <input name="Name" id="name" type="text"><br>
   <label for="date of birth">Date of Birth</label><br>
-  <input name="Date of Birth" id="date of birth" type="date">
+  <input name="Date of Birth" id="date of birth" type="date"><br>
   <label for="email">Your Email</label><br>
-  <input name="Email" id="email" type="email">
+  <input name="Email" id="email" type="email"><br>
+  <label for="phone">Your Phone Number</label><br>
+  <input name="Phone" id="phone" type="tel"><br>
+  <label for="street">Your Street Address</label><br>
+  <input name="Street" id="street" type="text"><br>
+  <label for="city">Your City</label><br>
+  <input name="City" id="city" type="text"><br>
+  <label for="state">Your State</label><br>
+  <input name="State" id="state" type="text"><br>
+  <label for="zip">Your Zip Code</label><br>
+  <input name="Zip" id="zip" type="text"><br>
   <button type="submit">Submit</button>
 </form>
 </body>
