--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ li a:hover:not(.active) {
     <p>At Kitty City Adoptions, we believe that every cat deserves a second chance. We work tirelessly to provide a safe and nurturing environment for our cats while they await their forever homes.</p>
     <p>Whether you're looking to adopt a new furry friend or simply want to support our cause, we invite you to explore our website and learn more about our work.</p>
     <p class="center-text">Thank you for visiting Kitty City!</p>
-
+<footer class="site-footer">
+  <p>&copy; 2025 Kitty City Adoptions. All rights reserved.</p>
+</footer>
     </body>
 
 </html>
